<resources>
    <string name="app_name">App-de-Tarefas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Comuns -->
    <string name="email_text">E-mail:</string>
    <string name="email_hint">email@email.com</string>
    <string name="password_text">Senha:</string>
    <string name="password_hint">*********</string>
    <string name="cpf_text">CPF:</string>
    <string name="cpf_hint">999.999.999–99</string>
    <string name="bottom_sheet_tv_warning">Atenção</string>
    <string name="bottom_sheet_btn_warning">Entendi</string>
    <string name="empty_email">Preencha seu E-mail</string>
    <string name="empty_password">Preencha sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente! </string>
    <string name="text_task_list_empty">Nenhuma tarefa cadastrada</string>
    <string name="text_task_list_load">Aguarde, estamos carregando as informações</string>
    <string name="text_delete_task_success">Tarefa removida com sucesso</string>
    <string name="text_dialog_confirm">Confirmar</string>
    <string name="text_title_dialog_delete">Deseja remover essa tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa</string>


    <!-- TabLayout -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>

    <!-- Login Fragment-->
    <string name="login_btn_enter_text">Entrar</string>
    <string name="login_forgot_password_text">Esqueci a senha</string>
    <string name="login_btn_dont_have_account_text">Não Tenho conta</string>

    <!-- Recover Password Firebase Fragment-->
    <string name="recover_password_firebase_description_recover_password">Recupere sua senha digitando o email cadastrado abaixo. Você receberá um e-mail para criar uma nova senha.</string>
    <string name="recover_password_firebase_recover_password_text">Recuperar senha</string>
    <string name="recover_password_send_button_text">Enviar</string>
    <string name="recover_password_message">Pronto, enviado para seu E-mail um link de recuperação de senha </string>

    <!-- Register Firebase Fragment-->
    <string name="register_firebase_btn_create_account_text">Criar Conta</string>
    <string name="register_firebase_tv_invalid_email">Preencha um E-mail válido</string>
    <string name="register_firebase_tv_empty_password">Preencha uma senha </string>
    <string name="register_fragment_create_account">Criar conta</string>

    <!-- Change Password Fragment-->
    <string name="change_password_current_password_text">Senha Atual:</string>
    <string name="change_password_new_password_text">Nova senha:</string>
    <string name="change_password_btn_change_passowd_text">Alterar Senha</string>
    <string name="change_password_confirm_new_passowrd_text">Confirme sua senha</string>
    <string name="change_password_password_not_match_text">As senhas não estão iguais</string>

    <!--    Form Task Fragment-->
    <string name="form_task_description_task_text">Descrição da tarefa:</string>
    <string name="form_task_create_task_hint">Criar uma nova tarefa</string>
    <string name="form_task_todo_text_button">A Fazer</string>
    <string name="form_task_doing_text_button">Fazendo</string>
    <string name="form_task_done_text_button">Feito</string>
    <string name="form_task_save_button">Salvar</string>
    <string name="form_task_empty_description">Preencha uma descrição para a tarefa</string>
    <string name="form_task_tv_new_task">Nova tarefa</string>
    <string name="form_task_tv_status">Status</string>
    <string name="form_task_save_success">Tarefa salva com sucesso </string>
    <string name="form_task_toolbar_title_update">Editando Tarefa</string>

    <!-- Item_Task -->
    <string name="item_task_btn_remove">Remover</string>
    <string name="item_task_btn_edit">editar</string>
    <string name="item_task_btn_details">Detalhes</string>

    <!-- Home Fragment-->

    <string name="home_fragment_confirm_logout_title_dialog">Deseja sair da sua conta?</string>
    <string name="home_fragment_confirm_logout_message_dialog">Aperte em confirmar para sair da sua conta.</string>

</resources>