<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/off_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit">

            <TextView
                android:id="@+id/tv_text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Criar tela para o app" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_Delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_Delete"
                app:tint="@color/primaria02" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Delete"
                style="@style/buttonTheme"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/danger"
                android:text="@string/item_task_btn_remove"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_details"
                app:layout_constraintEnd_toStartOf="@+id/btn_details"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_details" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_details"
                style="@style/buttonTheme"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/item_task_btn_edit"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_Delete"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                style="@style/buttonTheme"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/success"
                android:text="@string/item_task_btn_details"
                android:textSize="12sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_details"
                app:layout_constraintTop_toTopOf="@+id/btn_details" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/transparent"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                app:tint="@color/primaria02" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>